--- a/b.css
+++ b/b.css
@@ -123,3 +123,39 @@ h1 {
     border-radius: 1rem;
     color: black;
 }
+
+@media (max-width: 431px) {
+    .title {
+        font-family: "Barrio", system-ui;
+        font-weight: 400;
+        font-style: normal;
+        font-size: 3em;
+        text-align: center;
+        color: rgb(255, 255, 255);
+    }
+    .board {
+        margin-left: 13%;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-template-areas: 
+        "one two three"
+        "four five six"
+        "seven eight nine";
+    }
+    .cell {
+        text-align: center;
+        font-size: 3em;
+        font-family: "Barrio", system-ui;
+        font-weight: 100px;
+        width: 50px;
+        height: 50px;
+        cursor: pointer;
+    }
+    .stats {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1em;
+    }
+}
